[package]
name = "anat-rs"
version = "0.1.1"
authors = ["TriedAngle <Sebastian@Strobl.net>"]
edition = "2018"
repository = "https://github.com/TriedAngle/Anat"
description = "A library to represent natural numbers as well-founded sets"
license = "Apache-2.0"

[lib]
name = "anat"
path = "src/lib.rs"

[[example]]
name = "addition"
path = "examples/addition.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
